Updated German translation.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@998 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/actions/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/actions/messages_de.properties
@@ -13,10 +13,10 @@ OpenChartAction_10Min=10 Min.
 OpenChartAction_15Min=15 Min.
 OpenChartAction_30Min=30 Min.
 OpenChartAction_1Hr=1 Std.
-OpenChartAction_Daily=Tï¿½glich
-OpenChartAction_Weekly=Wï¿½chentlich
+OpenChartAction_Daily=Täglich
+OpenChartAction_Weekly=Wöchentlich
 OpenChartAction_Monthly=Monatlich
-DeleteChartAction_Title=Chart lï¿½schen
-DeleteObjectAction_Title=Objekt lï¿½schen
-DeleteObjectAction_Text=Mï¿½chten Sie das ausgewï¿½hlte Objekt wirklich lï¿½schen?
-DeleteChartAction_Text=Mï¿½chten Sie diesen Chart wirklich lï¿½schen?
+DeleteChartAction_Title=Chart löschen
+DeleteObjectAction_Title=Objekt löschen
+DeleteObjectAction_Text=Möchten Sie das ausgewählte Objekt wirklich löschen?
+DeleteChartAction_Text=Möchten Sie diesen Chart wirklich löschen?
