--- a/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/indicators/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/indicators/messages_de.properties
@@ -19,12 +19,12 @@ AdaptiveStochPreferencePage_DColor=%D Farbe
 AdaptiveStochPreferencePage_DLabel=%D Beschriftung
 AdaptiveStochPreferencePage_DLineType=%D Linienart
 AdaptiveStochPreferencePage_DPeriod=%D Period
-AdaptiveStochPreferencePage_DSmoothingType=%D Glï¿½ttungsart
+AdaptiveStochPreferencePage_DSmoothingType=%D Glättungsart
 AdaptiveStochPreferencePage_KColor=%K Farbe
 AdaptiveStochPreferencePage_KLabel=%K Beschriftung
 AdaptiveStochPreferencePage_KLineType=%K Linienart
 AdaptiveStochPreferencePage_KPeriod=%K Periode
-AdaptiveStochPreferencePage_KSMotthingType=%K Glï¿½ttungsart
+AdaptiveStochPreferencePage_KSMotthingType=%K Glättungsart
 AdaptiveStochPreferencePage_MaxLookbackPeriod=Max Betrachtungszeitraum
 AdaptiveStochPreferencePage_MinLookbackPeriod=Min Betrachtungszeitraum
 AdaptiveStochPreferencePage_Period=Periode
@@ -33,8 +33,8 @@ AdaptiveStochPreferencePage_SellLine=Verkaufslinie
 ATRPreferencePage_Color=Farbe
 ATRPreferencePage_Label=Beschriftung
 ATRPreferencePage_LineType=Linienart
-ATRPreferencePage_Smoothing=Glï¿½ttung
-ATRPreferencePage_SmoothingType=Glï¿½ttungsart
+ATRPreferencePage_Smoothing=Glättung
+ATRPreferencePage_SmoothingType=Glättungsart
 BarsPreferences_Bars=Balken
 BarsPreferences_CandleLines=Kerzenlunten
 BarsPreferences_Candles=Kerzen
@@ -49,13 +49,13 @@ BollingerBandsPreferencePage_Color=Farbe
 BollingerBandsPreferencePage_Deviation=Abweichung
 BollingerBandsPreferencePage_LineType=Linienart
 BollingerBandsPreferencePage_Period=Periode
-BollingerBandsPreferencePage_SmoothingType=Glï¿½ttungsart
+BollingerBandsPreferencePage_SmoothingType=Glättungsart
 CommodityChannelIndexPreferencePage_Color=Farbe
 CommodityChannelIndexPreferencePage_Label=Beschriftung
 CommodityChannelIndexPreferencePage_LineType=Linienart
 CommodityChannelIndexPreferencePage_Period=Periode
-CommodityChannelIndexPreferencePage_Smoothing=Glï¿½ttung
-CommodityChannelIndexPreferencePage_SmoothingType=Glï¿½ttungsart
+CommodityChannelIndexPreferencePage_Smoothing=Glättung
+CommodityChannelIndexPreferencePage_SmoothingType=Glättungsart
 DMIPreferencePage_ADXColor=ADX Farbe
 DMIPreferencePage_ADXLabel=ADX Beschriftung
 DMIPreferencePage_ADXLineType=ADX Linienart
@@ -66,8 +66,8 @@ DMIPreferencePage_PDMColor=+DM Farbe
 DMIPreferencePage_PDMLabel=+DM Beschriftung
 DMIPreferencePage_PDMLineType=+DM Linienart
 DMIPreferencePage_Period=Periode
-DMIPreferencePage_Smoothing=Glï¿½ttung
-DMIPreferencePage_SmoothingType=Glï¿½ttungsart
+DMIPreferencePage_Smoothing=Glättung
+DMIPreferencePage_SmoothingType=Glättungsart
 DPOPreferencePage_Color=Farbe
 DPOPreferencePage_Label=Beschriftung
 DPOPreferencePage_LineType=Linienart
@@ -76,8 +76,8 @@ DPOPreferencePage_Period=Periode
 FIPreferencePage_Color=Farbe
 FIPreferencePage_Label=Beschriftung
 FIPreferencePage_LineType=Linienart
-FIPreferencePage_Smoothing=Glï¿½ttung
-FIPreferencePage_SmoothingType=Glï¿½ttungsart
+FIPreferencePage_Smoothing=Glättung
+FIPreferencePage_SmoothingType=Glättungsart
 LinesPreferences_Color=Farbe
 LinesPreferences_Input=Eingangswert
 LinesPreferences_Label=Beschriftung
@@ -101,7 +101,7 @@ MAChannelsPreferencePage_Coefficient=Channel coefficient, %
 MAChannelsPreferencePage_Color=Farbe
 MAChannelsPreferencePage_LineType=Linienart
 MAChannelsPreferencePage_Period=Periode
-MAChannelsPreferencePage_SmoothingType=Glï¿½ttungsart
+MAChannelsPreferencePage_SmoothingType=Glättungsart
 MAOSCPreferencePage_Color=Farbe
 MAOSCPreferencePage_FastMAType=Schneller MA Typ
 MAOSCPreferencePage_FastPeriod=Schnelle Periode
@@ -124,8 +124,8 @@ MarketThermometerPreferences_MALabel=MA Beschriftung
 MarketThermometerPreferences_MALineType=MA Linienart
 MarketThermometerPreferences_MAPeriod=MA Periode
 MarketThermometerPreferences_MAType=MA Art
-MarketThermometerPreferences_Smoothing=Glï¿½ttung
-MarketThermometerPreferences_SmoothingType=Glï¿½ttungsart
+MarketThermometerPreferences_Smoothing=Glättung
+MarketThermometerPreferences_SmoothingType=Glättungsart
 MarketThermometerPreferences_ThresholdColor=Schwellenfarbe
 MarketThermometerPreferences_Threshold=Schwelle
 ROCPreferencePage_Color=Farbe
@@ -133,8 +133,8 @@ ROCPreferencePage_Input=Eingangswert
 ROCPreferencePage_Label=Beschriftung
 ROCPreferencePage_LineType=Linienart
 ROCPreferencePage_Period=Periode
-ROCPreferencePage_Smoothing=Glï¿½ttung
-ROCPreferencePage_SmoothingType=Glï¿½ttungsart
+ROCPreferencePage_Smoothing=Glättung
+ROCPreferencePage_SmoothingType=Glättungsart
 RSIPreferences_BuyLine=Kauflinie
 RSIPreferences_BuyLineColor=Kauflinienfarbe
 RSIPreferences_Color=Farbe
@@ -144,8 +144,8 @@ RSIPreferences_LineType=Linienart
 RSIPreferences_Period=Periode
 RSIPreferences_SellLineColor=Verkaufslinienfarbe
 RSIPreferences_SellLine=Verkaufslinien
-RSIPreferences_Smoothing=Glï¿½ttung
-RSIPreferences_SmoothingType=Glï¿½ttungsart
+RSIPreferences_Smoothing=Glättung
+RSIPreferences_SmoothingType=Glättungsart
 SARPreferencePage_Add=Addieren
 SARPreferencePage_Color=Farbe
 SARPreferencePage_Initial=Anfang
@@ -181,16 +181,16 @@ VFIPreferencePage_Color=Farbe
 VFIPreferencePage_Label=Beschriftung
 VFIPreferencePage_LineType=Linienart
 VFIPreferencePage_Period=Zeitbereich
-VFIPreferencePage_Smoothing=Glï¿½ttung
-VFIPreferencePage_SmoothingType=Glï¿½ttungsart
+VFIPreferencePage_Smoothing=Glättung
+VFIPreferencePage_SmoothingType=Glättungsart
 VIDYAPreferencePage_Color=Farbe
 VIDYAPreferencePage_Label=Beschriftung
 VIDYAPreferencePage_LineType=Linienart
 VIDYAPreferencePage_VidyaPeriod=Vidya Zeitbereich
-VIDYAPreferencePage_VolatilityPeriod=Volatilitï¿½tszeitbereich
+VIDYAPreferencePage_VolatilityPeriod=Volatilitätszeitbereich
 VolumePreferences_Label=Beschriftung
 VolumePreferences_Negative=Negativ
-VolumePreferences_Neutral=Unverï¿½ndet
+VolumePreferences_Neutral=Unverändet
 VolumePreferences_Positive=Positiv
 VTPreferencePage_Color=Farbe
 VTPreferencePage_Label=Beschriftung
