--- a/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/internal/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/internal/messages_de.properties
@@ -21,21 +21,21 @@ BarSummaryItem_L=T=
 BarSummaryItem_O=O=
 ChartSettingsDialog_Title=Charteinstellungen
 ChartsPrefereces_AllCharts=Alle Charts
-ChartsPrefereces_DeleteConfirmMessage=Wollen die den ausgewï¿½hlten Chart wirklich lï¿½schen?
-ChartsPrefereces_DeleteConfirmTitle=Chart lï¿½schen
-ChartsPrefereces_Delete=Lï¿½schen
+ChartsPrefereces_DeleteConfirmMessage=Wollen die den ausgewählten Chart wirklich löschen?
+ChartsPrefereces_DeleteConfirmTitle=Chart löschen
+ChartsPrefereces_Delete=Löschen
 ChartsPrefereces_ExtendCharts=Chart um
 ChartsPrefereces_ExtendScale=Skalierung erweitern um
 ChartsPrefereces_HideTabs=Registerkarten ausblenden
 ChartsPrefereces_Never=Niemals
 ChartsPrefereces_OnlyOneTab=Wenn nur eine angezeigt wird
-ChartsPrefereces_Periods=Datensï¿½tze erweitern
+ChartsPrefereces_Periods=Datensätze erweitern
 ChartsPrefereces_Settings=Einstellungen
-ChartView_DeleteMessagePrefix=Mï¿½chten Sie die Registerkarte 
+ChartView_DeleteMessagePrefix=Möchten Sie die Registerkarte 
 ChartView_DeleteMessageSuffix=\ wirklich entfernen?
 ChartView_FollowSecuritySelection=Folge der Wertpapierauswahl
 ChartView_NewObject=Neues Objekt
-ChartView_NoDataMessage=Keine Daten verfï¿½gbar.\r\nMï¿½chten Sie die Daten jetzt herunterladen?
+ChartView_NoDataMessage=Keine Daten verfügbar.\r\nMöchten Sie die Daten jetzt herunterladen?
 ChartView_Period=Zeitraum
 ChartView_SetInterval=Intervall festlegen
 ChartView_UpdateChartMessage=Chartdaten aktualisieren
@@ -47,28 +47,32 @@ CustomPeriodDialog_BeginDate=Startdatum
 CustomPeriodDialog_EndDate=Enddatum
 CustomPeriodDialog_Title=Bestimmter Zeitraum
 CutAction_Cut=Cu&t
-DataView_Close=Schlieï¿½en
+DataView_Close=Schließen
 DataView_Date=Datum
 DataView_High=Hoch
 DataView_Low=Tief
-DataView_Open=Erï¿½ffnung
-DefaultConfigurationPage_AddIndicator=Indikator hinzufï¿½+DefaultConfigurationPage_AddRow=Zeile hinzufï¿½+DefaultConfigurationPage_AddTab=Registerkarte hinzufï¿½+DefaultConfigurationPage_AddTabDialogMessage=Geben Sie den Namen der Registerkarte ein:
-DefaultConfigurationPage_AddTabDialogTitle=Registerkarte hinzufï¿½+DefaultConfigurationPage_BeginDate=Startdatum
+DataView_Open=Eröffnung
+DefaultConfigurationPage_AddIndicator=Indikator hinzufügen
+DefaultConfigurationPage_AddRow=Zeile hinzufügen
+DefaultConfigurationPage_AddTab=Registerkarte hinzufügen
+DefaultConfigurationPage_AddTabDialogMessage=Geben Sie den Namen der Registerkarte ein:
+DefaultConfigurationPage_AddTabDialogTitle=Registerkarte hinzufügen
+DefaultConfigurationPage_BeginDate=Startdatum
 DefaultConfigurationPage_EndDate=Enddatum
 DefaultConfigurationPage_Interval=Intervall
 DefaultConfigurationPage_Layout=Anordnung
 DefaultConfigurationPage_Period=Zeitraum
-DefaultConfigurationPage_Remove=Lï¿½schen
+DefaultConfigurationPage_Remove=Löschen
 DefaultConfigurationPage_Row=ROW 
 DefaultConfigurationPage_Settings=Einstellungen
 DefaultConfigurationPage_TabSettingsDialogMessage=Geben Sie den Namen der Registerkarte ein:
 DefaultConfigurationPage_TabSettingsDialogTitle=Einstellungen der Registerkarte
-DeleteAction_ConfirmDialogMessage=Soll das ausgewï¿½hlte Objekt wirklich gelï¿½scht werden?
-DeleteAction_ConfirmDialogTitle=Objekt lï¿½schen
-DeleteAction_Delete=&Lï¿½schen
+DeleteAction_ConfirmDialogMessage=Soll das ausgewählte Objekt wirklich gelöscht werden?
+DeleteAction_ConfirmDialogTitle=Objekt löschen
+DeleteAction_Delete=&Löschen
 GeneralPage_BeginDate=Startdatum
 GeneralPage_ChartTitle=Titel
-GeneralPage_ClearData=Chartdaten lï¿½schen
+GeneralPage_ClearData=Chartdaten löschen
 GeneralPage_EndDate=Enddatum
 GeneralPage_FirstDate=Erster Tag
 GeneralPage_Interval=Intervall
@@ -76,13 +80,13 @@ GeneralPage_LastDate=Letzer Tag
 GeneralPage_Period=Zeitraum
 GeneralPage_SaveDefault=Als Standard festlegen
 GeneralPage_Title=Allgemein
-IndicatorLocationPage_Description=Wï¿½hlen Sie den Ort an dem der Indikator eingefï¿½gt werden soll!
+IndicatorLocationPage_Description=Wählen Sie den Ort an dem der Indikator eingefügt werden soll!
 IndicatorLocationPage_NewRow=In einer neuen Zeile
 IndicatorLocationPage_NewTab=Neue Registerkarte in Zeile
 IndicatorLocationPage_Stacked=Auf
 IndicatorLocationPage_TabLabel=Beschriftung
 IndicatorLocationPage_Title=Position des Indikators
-IndicatorPage_Description=Wï¿½hlen Sie den Indikator aus, der hinzugefï¿½gt werden soll:
+IndicatorPage_Description=Wählen Sie den Indikator aus, der hinzugefügt werden soll:
 IndicatorPage_Title=Indikator
 IndicatorPlugin_EMA=EMA
 IndicatorPlugin_SMA=SMA
@@ -92,7 +96,7 @@ IndicatorSettingsDialog_Title=Indikatoreinstellungen
 InputField_Close=Schluss
 InputField_High=Hoch
 InputField_Low=Tief
-InputField_Open=Erï¿½ffnung
+InputField_Open=Eröffnung
 InputField_Volume=Volumen
 InputSecurity_Default=<Standard>
 Interval_10Min=10 Min.
@@ -115,9 +119,11 @@ MAType_Exponential=exponentiell
 MAType_Simple=einfach
 MAType_Weighted=gewichtet
 MAType_Williams=William's
-NewIndicatorWizard_Title=Assistent fï¿½r neuen Indikator
-ObjectSettingsDialog_Title=Einstellungen fï¿½r Objekt
-PasteAction_Paste=&Einfï¿½+PasteSpecialAction_PasteSpecial=als neue Registerkarte einfï¿½+Period_1Year=1 Jahr
+NewIndicatorWizard_Title=Assistent für neuen Indikator
+ObjectSettingsDialog_Title=Einstellungen für Objekt
+PasteAction_Paste=&Einfügen
+PasteSpecialAction_PasteSpecial=als neue Registerkarte einfügen
+Period_1Year=1 Jahr
 Period_2Years=2 Jahre
 Period_6Months=6 Monate
 Period_All=Alles
