--- a/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/objects/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.charts.nl1/src/net/sourceforge/eclipsetrader/charts/objects/messages_de.properties
@@ -6,18 +6,18 @@ FiboLinePreferences_Color=Farbe
 FiboLinePreferences_StartDateValue=Anfangsdatum/-wert
 FiboLinePreferences_EndDateValue=Enddatum/-wert
 FiboLinePreferences_Lines=Linien
-FiboLinePreferences_ExtendStart=Anfang verlï¿½ngern
-FiboLinePreferences_ExtendEnd=Ende verlï¿½ngern
+FiboLinePreferences_ExtendStart=Anfang verlängern
+FiboLinePreferences_ExtendEnd=Ende verlängern
 HorizontalLinePreferences_Color=Farbe
 HorizontalLinePreferences_Value=Wert
 LinePreferences_Color=Farbe
 LinePreferences_StartDateValue=Anfangsdatum/-wert
 LinePreferences_EndDateValue=Enddatum/-wert
-LinePreferences_ExtendStart=Anfang verlï¿½ngern
-LinePreferences_ExtendEnd=Ende verlï¿½ngern
+LinePreferences_ExtendStart=Anfang verlängern
+LinePreferences_ExtendEnd=Ende verlängern
 ParallelLinePreferences_Color=Farbe
 ParallelLinePreferences_StartDateValue=Anfangsdatum/-wert
 ParallelLinePreferences_EndDateValue=Enddatum/-wert
 ParallelLinePreferences_OffsetValue=Abstand der Linien
-ParallelLinePreferences_ExtendStart=Anfang verlï¿½ngern
-ParallelLinePreferences_ExtendEnd=Ende verlï¿½ngern
+ParallelLinePreferences_ExtendStart=Anfang verlängern
+ParallelLinePreferences_ExtendEnd=Ende verlängern
