--- a/net.sourceforge.eclipsetrader.charts.nl1/plugin_de.properties
+++ b/net.sourceforge.eclipsetrader.charts.nl1/plugin_de.properties
@@ -12,7 +12,7 @@
 perspective.charts.name = Charts
 
 view.chart.name=Chart
-view.chartData.name = Chart Daten
+view.chartData.name = Chartdaten
 
 actionSet.charts.label = Charts
 actionSet.menu.chart.label = Chart
