Updated German translation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1000 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core.nl1/plugin_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/plugin_de.properties
@@ -7,14 +7,14 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
 Bundle-Name = Kern
 Bundle-Vendor = EclipseTrader
 
 categoryName=EclipseTrader
-currenciesView=Wï¿½hrungen
+currenciesView=Währungen
 eventsView=Ereignisse
 securitiesView=Wertpapiere
 webBrowserView=Web Browser
@@ -36,7 +36,7 @@ page.name.General = Allgemein
 page.name.Plugins = Plugins
 page.name.Network = Netzwerk
 page.name.Data = Daten
-page.name.Currencies = Wï¿½hrungen
+page.name.Currencies = Währungen
 themeElementCategory.label.SecuritiesView = Wertpapierfenster
 colorDefinition.label.Background = Hintergrund
 colorDefinition.label.Foreground = Vordergrund
