Updated German translation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1001 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/messages_de.properties
@@ -13,16 +13,16 @@ SecurityExplorer_CreateGroupAction=Create Group...
 SecurityExplorer_ExpandAllAction=Expand all
 SecurityExplorer_CollapseAllAction=Collapse all
 SecurityExplorer_LinkSelectionAction=Link with selection
-SecurityExplorer_DeleteAction=Delete
+SecurityExplorer_DeleteAction=Löschen
 GroupsPresentationAction_Label=Groups Presentation
 GroupsPresentationAction_FlatLabel=Flat
 GroupsPresentationAction_HierarchicalLabel=Hierarchical
 BulkChangesAction_Label=Change
-BulkChangesAction_QuoteFeedLabel=Quelle fï¿½r Kursdaten
-BulkChangesAction_Level2FeedLabel=Quelle fï¿½r Level2 Daten
-BulkChangesAction_HistoryFeedLabel=Quelle fï¿½r hist. Daten
+BulkChangesAction_QuoteFeedLabel=Quelle für Kursdaten
+BulkChangesAction_Level2FeedLabel=Quelle für Level2 Daten
+BulkChangesAction_HistoryFeedLabel=Quelle für hist. Daten
 BulkChangesAction_IntradayChartLabel=Intraday Charts
 BulkChangesAction_TradingLabel=Handelseinstellungen
 FlatLabelProvider_Separator=\ - 
-CurrencyConverter_UpdatingTaskName=Aktualisiere Wï¿½hrungen
-CurrencyConverter_NA=nicht verfï¿½gbar
+CurrencyConverter_UpdatingTaskName=Aktualisiere Währungen
+CurrencyConverter_NA=nicht verfügbar
