--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/dialogs/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/dialogs/messages_de.properties
@@ -7,10 +7,10 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
-CurrencyConversionDialog_Title=Wï¿½hrungsumrechnung
+CurrencyConversionDialog_Title=Währungsumrechnung
 CurrencyConversionDialog_Convert=Umrechnen
 CurrencyConversionDialog_To=in
 CurrencyConversionDialog_Equal==
@@ -26,11 +26,11 @@ ExchangeRateDialog_DefaultFrom=USD
 ExchangeRateDialog_To=in
 ExchangeRateDialog_Equals==
 FeedSelectionDialog_ShellTitle=Feed
-FeedSelectionDialog_DialogTitle=Datenquelle ï¿½ndern
-FeedSelectionDialog_Description=Wï¿½hlen Sie die Datenquelle fï¿½r die ausgewï¿½hlten Wertpapiere aus!
+FeedSelectionDialog_DialogTitle=Datenquelle ändern
+FeedSelectionDialog_Description=Wählen Sie die Datenquelle für die ausgewählten Wertpapiere aus!
 IntradayChartsDialog_ShellTitle=Intraday Charts
-IntradayChartsDialog_DialogTitle=Intraday Charts ï¿½ndern
-IntradayChartsDialog_Description=Wï¿½hlen Sie die Einstellungen fï¿½r Intraday Charts der ausgewï¿½hlten Wertpapiere aus!
+IntradayChartsDialog_DialogTitle=Intraday Charts ändern
+IntradayChartsDialog_Description=Wählen Sie die Einstellungen für Intraday Charts der ausgewählten Wertpapiere aus!
 TradingOptionsDialog_ShellTitle=Handelseinstellungen
-TradingOptionsDialog_DialogTitle=Handelseinstellungen ï¿½ndern
-TradingOptionsDialog_Description=Wï¿½hlen Sie die Einstellungen fï¿½r den Handel mit den ausgewï¿½hlten Wertpapieren!
+TradingOptionsDialog_DialogTitle=Handelseinstellungen ändern
+TradingOptionsDialog_Description=Wählen Sie die Einstellungen für den Handel mit den ausgewählten Wertpapieren!
