--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/export/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/export/messages_de.properties
@@ -7,7 +7,7 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel	   - German translation
+#     Heiko Hänsel	   - German translation
 ###############################################################################
 
 ExportSelectionPage_Last=Letzte Kurse
@@ -16,7 +16,7 @@ ExportSelectionPage_intraday=Intradaykurse
 ExportSelectionPage_FileLabel=Dateiname:
 ExportSelectionPage_All=Alle exportieren
 ExportSelectionPage_FileDialogTitle=Dateiexport
-ExportSelectionPage_DestinationLabel=Wï¿½hlen Sie das Exportziel aus:
+ExportSelectionPage_DestinationLabel=Wählen Sie das Exportziel aus:
 ExportSelectionPage_SelectLabel=Selektieren Sie die zu exportierenden Daten:
 ExportSelectionPage_Historical=Historische Kurse
 ExportSelectionPage_BrowseButton=Suchen...
@@ -24,6 +24,6 @@ CSVExport_Title=CSV Datenexport
 CSVExport_Description=Exportiert Kursdaten in eine CSV Datei im lokalen Dateisystem.
 CSVExport_JobName=CSV Export
 CSVExport_LastTask=Exportiere letzte Kurse
-CSVExport_ErrorMessage=Fehler wï¿½hrend des Datenexports
+CSVExport_ErrorMessage=Fehler während des Datenexports
 CSVExport_HistoricalTask=Exportiere historische Kurse
 CSVExport_IntradayTask=Exportiere Intradaykurse
