--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/internal/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/internal/messages_de.properties
@@ -7,6 +7,6 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel	   - German translation
+#     Heiko Hänsel	   - German translation
 ###############################################################################
 
