--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/preferences/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/preferences/messages_de.properties
@@ -7,26 +7,28 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
+#     Heiko Hänsel	   - German translation
 ###############################################################################
 
-CurrencyPreferencesPage_Code=Kï¿½rzel
+CurrencyPreferencesPage_Code=Kürzel
 CurrencyPreferencesPage_Country=Land
-CurrencyPreferencesPage_JobName=Aktualisiere Wï¿½hrungen
-CurrencyPreferencesPage_AutoUpdate=Wï¿½hrungen bei der Kursdatenaktualisierung ebenfalls aktualisieren
-SecurityPropertiesDialog_Title=Eigenschaften fï¿½+SecurityPropertiesDialog_Code=Kï¿½rzel
+CurrencyPreferencesPage_JobName=Aktualisiere Währungen
+CurrencyPreferencesPage_AutoUpdate=Währungen bei der Kursdatenaktualisierung ebenfalls aktualisieren
+SecurityPropertiesDialog_Title=Eigenschaften für
+SecurityPropertiesDialog_Code=Kürzel
 SecurityPropertiesDialog_Name=Notizen
 SecurityPropertiesDialog_Level2Page=Level II
 SecurityPropertiesDialog_GeneralPage=Allgemein
 SecurityPropertiesDialog_Description=Bezeichnung
 SecurityPropertiesDialog_HistoryPage=Historisch
-SecurityPropertiesDialog_ClearHistory=Historische Kursdaten lï¿½schen
-SecurityPropertiesDialog_ClearIntraday=Intradaykursdaten lï¿½schen
-SecurityPropertiesDialog_Currency=Wï¿½hrung
+SecurityPropertiesDialog_ClearHistory=Historische Kursdaten löschen
+SecurityPropertiesDialog_ClearIntraday=Intradaykursdaten löschen
+SecurityPropertiesDialog_Currency=Währung
 SecurityPropertiesDialog_QuotePage=Kurse
 SecurityPropertiesDialog_IntradayChartsPage=Intraday Charts
 SecurityPropertiesDialog_TradeSourceTitle=Handel
 FeedOptions_Feed=Datenlieferant
-FeedOptions_Exchange=Bï¿½rsenplatz
+FeedOptions_Exchange=Börsenplatz
 FeedOptions_Symbol=Symbol
 IntradayDataOptions_Enable=Automatisch erzeugen
 IntradayDataOptions_Begin=Beginn (hh:mm)
@@ -43,12 +45,14 @@ IntradayDataOptions_KeepDays=Aufbewahren (Tage)
 DividendsPage_Title=Dividenden
 DividendsPage_Date=Datum
 DividendsPage_Value=Wert
-DividendsPage_Add=Hinzufï¿½+DividendsPage_Delete=Entfernen
+DividendsPage_Add=Hinzufügen
+DividendsPage_Delete=Entfernen
 SplitsPage_Title=Splits
 SplitsPage_Date=Datum
 SplitsPage_From=Von
 SplitsPage_To=Nach
-SplitsPage_Add=Hinzufï¿½+SplitsPage_Delete=Entfernen
+SplitsPage_Add=Hinzufügen
+SplitsPage_Delete=Entfernen
 LoggerPreferencesPage_WriteToConsole=Ausgabe auf der Console
 LoggerPreferencesPage_WriteToFile=Ausgabe in eine Datei
 LoggerPreferencesPage_Format=Format
@@ -71,13 +75,13 @@ ProxyPreferencePage_Password=Passwort
 ProxyPreferencePage_PortErrorMessage=Die Portnummer muss im Bereich von 0-65535 sein!
 ProxyPreferencePage_EnableAuthentication=Authentifizierung verwenden
 TradeSourceOptions_Provider=Broker
-TradeSourceOptions_Exchange=Bï¿½rsenplatz
+TradeSourceOptions_Exchange=Börsenplatz
 TradeSourceOptions_Symbol=Symbol
 TradeSourceOptions_Account=Konto
 TradeSourceOptions_Quantity=Menge
-DataPreferencesPage_HistoryRange=Zeitspanne fï¿½r historische Kurse
+DataPreferencesPage_HistoryRange=Zeitspanne für historische Kurse
 DataPreferencesPage_Years=Jahr(en)
 DataPreferencesPage_Days=Tagen
-DataPreferencesPage_HistoryRangeTooltip=Maximaler Zeitraum, fï¿½r den beim ersten Download historische Kurse abgefragt werden
-DataPreferencesPage_DeleteCanceledOrders=Stornierte Auftrï¿½ge lï¿½schen nach
-DataPreferencesPage_DeleteFilledOrders=Ausgefï¿½hrte Auftrï¿½ge lï¿½schen nach 
+DataPreferencesPage_HistoryRangeTooltip=Maximaler Zeitraum, für den beim ersten Download historische Kurse abgefragt werden
+DataPreferencesPage_DeleteCanceledOrders=Stornierte Aufträge löschen nach
+DataPreferencesPage_DeleteFilledOrders=Ausgeführte Aufträge löschen nach 
