--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/views/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/views/messages_de.properties
@@ -7,16 +7,17 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
-EventsView_RemoveActionTooltip=Lï¿½scht das ausgewï¿½hlte Ereignis
-EventsView_RemoveAllActionTooltip=Lï¿½scht alle Ereignisse
+EventsView_RemoveActionTooltip=Löscht das ausgewählte Ereignis
+EventsView_RemoveAllActionTooltip=Löscht alle Ereignisse
 EventsView_Date=Datum
 EventsView_Time=Zeit
 EventsView_Security=Wertpapier
 EventsView_Message=Nachricht
-WebBrowser_Back=Zurï¿½+WebBrowser_Forward=Vorwï¿½rts
+WebBrowser_Back=Zurück
+WebBrowser_Forward=Vorwärts
 WebBrowser_Stop=Anhalten
 WebBrowser_Refresh=Aktualisieren
 WebBrowser_Go=Los
