--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/wizards/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/ui/wizards/messages_de.properties
@@ -7,22 +7,22 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
-SecurityWizard_Title=Assistent fï¿½r neues Wertpapier
+SecurityWizard_Title=Assistent für neues Wertpapier
 SecurityPage_Title=Werpapierbezeichnung
-SecurityWizard_QuoteFeedTitle=Quelle fï¿½r Kursdaten
-SecurityPage_CurrencyColumn=Wï¿½hrung
-SecurityWizard_Level2FeedTitle=Quelle fï¿½r Level II Kursdaten
+SecurityWizard_QuoteFeedTitle=Quelle für Kursdaten
+SecurityPage_CurrencyColumn=Währung
+SecurityWizard_Level2FeedTitle=Quelle für Level II Kursdaten
 SecurityPage_DescriptionColumn=Bezeichnung
-SecurityWizard_HistoryFeedTitle=Quelle fï¿½r historische Kursdaten
+SecurityWizard_HistoryFeedTitle=Quelle für historische Kursdaten
 SecurityWizard_TradeSourceTitle=Handle
-SecurityPage_Description=Geben Sie das Wertpapierkï¿½rzel und die Bezeichnung ein!
-SecurityPage_CodeColumn=Kï¿½rzel
-SecurityWizard_QuoteFeedDescription=Wï¿½hlen Sie den Datenlieferant fï¿½r die Kurse aus!
-SecurityWizard_Level2FeedDescription=Wï¿½hlen Sie den Datenlieferant fï¿½r Level II Kurse aus!
-SecurityWizard_HistoryFeedDescription=Wï¿½hlen Sie den Datenlieferant fï¿½r die historischen Kurse aus!
-SecurityWizard_TradeSourceDescription=Legen Sie die Einstellungen fï¿½r den Handel mit diesem Wertpapier fest!
+SecurityPage_Description=Geben Sie das Wertpapierkürzel und die Bezeichnung ein!
+SecurityPage_CodeColumn=Kürzel
+SecurityWizard_QuoteFeedDescription=Wählen Sie den Datenlieferant für die Kurse aus!
+SecurityWizard_Level2FeedDescription=Wählen Sie den Datenlieferant für Level II Kurse aus!
+SecurityWizard_HistoryFeedDescription=Wählen Sie den Datenlieferant für die historischen Kurse aus!
+SecurityWizard_TradeSourceDescription=Legen Sie die Einstellungen für den Handel mit diesem Wertpapier fest!
 SecurityWizard_IntradayChartsTitle=Intraday Charts
-SecurityWizard_IntradayChartsDescription=Legen Sie die Einstellungen fï¿½r die automatische Erstellung von Intraday Charts fest!
+SecurityWizard_IntradayChartsDescription=Legen Sie die Einstellungen für die automatische Erstellung von Intraday Charts fest!
