--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/internal/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/internal/messages_de.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004-2007 Marco Maccaferri and others.
+# Copyright (c) 2004-2006 Marco Maccaferri and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -7,10 +7,13 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hänsel     - German translation
+#     Heiko Hänsel	   - German translation
 ###############################################################################
 
-DeleteSecurityAction_Title=Wertpapier
-DeleteSecurityAction_Message=Möchten Sie das ausgewählte Wertpapier wirklich löschen?
-RefreshCurrenciesAction_JobName=Aktualisiere Währungen
-PropertiesAction_Text=Ei&genschaften
+CorePlugin_DateTimeFormat=MM/dd/yyyy HH:mm
+CorePlugin_DateTimeParse=MM/dd/yy HH:mm
+CorePlugin_DateFormat=MM/dd/yyyy
+CorePlugin_DateParse=MM/dd/yy
+CorePlugin_TimeFormat=HH:mm:ss
+CorePlugin_TimeParse=HH:mm:ss
+CorePlugin_UpdateCurrencies=Aktualisiere Währungen
