--- a/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/transfers/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.core.nl1/src/net/sourceforge/eclipsetrader/core/transfers/messages_de.properties
@@ -1,1 +1,1 @@
-SecurityTransfer_Exception=Ausnahmefehler wï¿½hrend des Datentransfers
+SecurityTransfer_Exception=Ausnahmefehler während des Datentransfers
