Updated the German translation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1009 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.nl1/plugin_de.properties
+++ b/net.sourceforge.eclipsetrader.nl1/plugin_de.properties
@@ -7,7 +7,7 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
 productBlurb=EclipseTrader\n\
@@ -21,15 +21,15 @@ Visit http://eclipsetrader.sourceforge.net\n\
 \n\
 Icons artwork from famfamfam.com http://www.famfamfam.com/lab/icons/silk/\n\
 \n\
-This product includes software developed by the\n\
-Apache Software Foundation http://www.apache.org/
+Dieses Produkt enthält Software, die von der\n\
+Apache Software Foundation http://www.apache.org/ entwickelt wurde.
 
 product.name.eclipseTrader = EclipseTrader
 actionSet.label.softwareUpdates = Softwareaktualisierungen
 menu.label.softwareUpdates = Softwareaktualisierungen
 action.label.newUpates = Suchen und installieren...
 action.label.configManager = Konfiguration verwalten...
-command.name.pasteSpecial = Einfï¿½gen spezial
+command.name.pasteSpecial = Einfügen spezial
 command.name.settings = Einstellungen
 page.name.appearance = Darstellung
 page.name.colorsAndFonts = Farben und Schriftarten
