Updated the German translation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1011 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.nl1/src/net/sourceforge/eclipsetrader/internal/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.nl1/src/net/sourceforge/eclipsetrader/internal/messages_de.properties
@@ -7,8 +7,8 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
-CloseAllAction.CloseAllText=Alle schlieï¿½en
-CloseAction.CloseText=Schlieï¿½en
+CloseAllAction.CloseAllText=Alle schließen
+CloseAction.CloseText=Schließen
