--- a/net.sourceforge.eclipsetrader.nl1/src/net/sourceforge/eclipsetrader/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.nl1/src/net/sourceforge/eclipsetrader/messages_de.properties
@@ -7,18 +7,18 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
 ApplicationActionBarAdvisor_File=Datei
 ApplicationActionBarAdvisor_New=Neu
 ApplicationActionBarAdvisor_Edit=Bearbeiten
 ApplicationActionBarAdvisor_ShowView=Fenster anzeigen
-ApplicationActionBarAdvisor_OpenPerspective=Perspektive ï¿½ffnen
+ApplicationActionBarAdvisor_OpenPerspective=Perspektive öffnen
 ApplicationActionBarAdvisor_Window=&Fenster
 ApplicationActionBarAdvisor_Help0=&Hilfe
 ApplicationWorkbenchWindowAdvisor_RestoreWindow=Fenster wiederherstellen
-ApplicationWorkbenchWindowAdvisor_ConfirmExit=Beenden bestï¿½tigen
+ApplicationWorkbenchWindowAdvisor_ConfirmExit=Beenden bestätigen
 ApplicationWorkbenchWindowAdvisor_ExitEclipseTrader=EclipseTrader wirklich beenden?
 ApplicationWorkbenchWindowAdvisor_AlwaysExitWithoutPrompt=Immer ohne Nachfrage beenden
 ApplicationWorkbenchWindowAdvisor_Separator=\ - 
