--- a/net.sourceforge.eclipsetrader.nl1/src/net/sourceforge/eclipsetrader/preferences/messages_de.properties
+++ b/net.sourceforge.eclipsetrader.nl1/src/net/sourceforge/eclipsetrader/preferences/messages_de.properties
@@ -7,11 +7,11 @@
 #
 # Contributors:
 #     Marco Maccaferri - initial API and implementation
-#     Heiko Hï¿½nsel     - German translation
+#     Heiko Hänsel     - German translation
 ###############################################################################
 
 StartupShutdownPreferencesPage.UpdateHistoryDataText=Historische Daten beim Start aktualisieren
 StartupShutdownPreferencesPage.UpdateOnceText=Nur einmal am Tag aktualisieren
 StartupShutdownPreferencesPage.UpdateNewsText=Nachrichten beim Start aktualisieren
 StartupShutdownPreferencesPage.MinimizeToTrayText=Nur im System Tray anzeigen
-StartupShutdownPreferencesPage.ConfirmExitText=Verlassen der Anwendung bestï¿½tigen
+StartupShutdownPreferencesPage.ConfirmExitText=Verlassen der Anwendung bestätigen
