Initial German translation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1029 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader-feature/feature_de.properties
+++ b/net.sourceforge.eclipsetrader-feature/feature_de.properties
@@ -19,7 +19,7 @@ providerName=Sourceforge.net
 updateSiteName=EclipseTrader Aktualisierungsseite
 
 # "description" property - description of the feature
-description=Bï¿½rse, Finanzanalysen und Handelssystem
+description=Börse, Finanzanalysen und Handelssystem
 
 # copyright
 copyright=\
