--- a/org.eclipsetrader.news/src/org/eclipsetrader/news/internal/preferences/messages.properties
+++ b/org.eclipsetrader.news/src/org/eclipsetrader/news/internal/preferences/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004-2007 Marco Maccaferri and others.
+# Copyright (c) 2004-2008 Marco Maccaferri and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -12,14 +12,15 @@
 RSSFeedDialog_Title=RSS Feed
 RSSFeedDialog_Source=Source
 RSSFeedDialog_URL=URL
+
 NewsPreferencesPage_StartupUpdate=Update on startup
 NewsPreferencesPage_FollowQuoteFeed=Follow quote feed running status
 NewsPreferencesPage_DaysToKeep=Days to keep
-NewsPreferencesPage_Provider=Providers
-RSSPreferencesPage_AutoUpdate=Automatic update every
-RSSPreferencesPage_Minutes=minutes
-RSSPreferencesPage_Source=Source
-RSSPreferencesPage_URL=URL
+NewsPreferencesPage_Providers=Providers
+
+RSSPreferencesPage_AutoUpdate=Update every
+RSSPreferencesPage_Minutes=minute(s)
+RSSPreferencesPage_Subscriptions=Subscriptions:
 RSSPreferencesPage_Add=Add
 RSSPreferencesPage_Edit=Edit
 RSSPreferencesPage_Remove=Remove
