Fixed headline navigation, icons update, externalized strings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1357 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.news/src/org/eclipsetrader/news/internal/preferences/messages.properties
+++ b/org.eclipsetrader.news/src/org/eclipsetrader/news/internal/preferences/messages.properties
@@ -13,10 +13,11 @@ RSSFeedDialog_Title=RSS Feed
 RSSFeedDialog_Source=Source
 RSSFeedDialog_URL=URL
 
-NewsPreferencesPage_StartupUpdate=Update on startup
 NewsPreferencesPage_FollowQuoteFeed=Follow quote feed running status
 NewsPreferencesPage_DaysToKeep=Days to keep
+NewsPreferencesPage_EnableDecorators=Enable decorators
 NewsPreferencesPage_Providers=Providers
+NewsPreferencesPage_RunAtStartup=Run At startup
 
 RSSPreferencesPage_AutoUpdate=Update every
 RSSPreferencesPage_Minutes=minute(s)
