Grouped bar, candles and line chart to a single object factory used to plot the main chart, added main chart properties page
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@1479 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/org.eclipsetrader.ui.charts/src/org/eclipsetrader/ui/charts/messages.properties
+++ b/org.eclipsetrader.ui.charts/src/org/eclipsetrader/ui/charts/messages.properties
@@ -5,10 +5,12 @@ ChartView_NotificationErrorMessage=Unexpected exception notifying chart view lis
 ChartViewer_HorizontalScaleRenderingError=Error rendering horizontal scale
 ChartViewer_RenderingErrorMessage=Error rendering chart
 DateScaleCanvas_HorizontalScaleRenderingError=Error rendering horizontal scale
+RenderStyle_BarsText=Bars
+RenderStyle_CandlesText=Candles
 RenderStyle_DashText=Dash
 RenderStyle_DotText=Dot
 RenderStyle_HistogramBarsText=Histogram Bars
-RenderStyle_HistogramText=Histogram
+RenderStyle_HistogramText=Histogram Area
 RenderStyle_Invisible=Invisible
 RenderStyle_LineText=Line
 SummaryNumberItem_Label={0}{1}
